--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/TopoLink/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/TopoLink/Default.cshtml
@@ -1,10 +1,30 @@
-﻿<div class="brands">
-    <nav>
-        <ul class="nav">
-            <li><a href="" title="Clícicas ">Clícicas </a></li>
-            <li><a href="" title="Exames de imagem   ">Exames de imagem   </a></li>
-            <li><a href="" title="Tomografia">Tomografia</a></li>
-            <li><a href="" title=" São Caetano do Sul - SP"> São Caetano do Sul - SP</a></li>
-        </ul>
-    </nav>
-</div>
+﻿@model ui.portal.jenn.ViewModel.PesquisaViewModel
+
+   <div class="brands" style="width:80%; padding-left:2px;"  >
+ 
+        <nav>
+            <ul class="nav">
+                @if (Model.Produto != null && Model.Localidade != null)
+                {
+                    <li>
+                        <a href="" title="@Model.Produto"> @Model.Produto</a>
+                        <a href="" title="@Model.Localidade">em  @Model.Localidade - SP</a>
+                    </li>
+                }
+                else if (Model.Produto != null && Model.Localidade == null)
+                {
+                    <li><a href="" title="@Model.Produto">Por Exame - @Model.Produto</a></li>
+
+                }
+                else if (Model.Produto == null && Model.Localidade != null)
+                {
+                    <li><a href="" title="@Model.Localidade">Procedimentos em  @Model.Localidade - SP</a></li>
+
+                }
+                else
+                {
+
+                }
+            </ul>
+        </nav>
+    </div>
