--- a/src/frontend/ui.portal.jenn/Views/Shared/Autenticar.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Autenticar.cshtml
@@ -93,7 +93,7 @@
                         </a>
                     </div>
                 </div>
-                <p class="txt-p">Ainda não tem conta? <a href="Cadastrar" title="">Faça seu cadastro</a></p>
+                <p class="txt-p">Ainda não tem conta? <a href="@Url.Action("Cadastrar", "Home")" title="">Faça seu cadastro</a></p>
 
             </div>
         </section>
