--- a/src/frontend/ui.portal.jenn/Views/Shared/Cadastrar.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Cadastrar.cshtml
@@ -95,7 +95,7 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" id="gridCheck">
                                 <label class="form-check-label" asp-for="Concordo" for="gridCheck">
-                                    Eu aceito os <a href="" title="">termos e condições </a> e a <a href="" title="">política de privacidade.</a>
+                                    Eu aceito os <a href="@Url.Action("TermosCondicoes", "Home")" title="">termos e condições </a> e a <a href="@Url.Action("SegurancaInformacao", "Home")" title="">política de privacidade.</a>
                                 </label>
                             </div>
                         </div>
