--- a/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
@@ -118,7 +118,7 @@
                             </div>
 
                             <div style="padding-top: 50%;" class="action-list">
-                                <a onclick="filtrarTodos()" id="botaofiltrartodos" href="" class="btn btn-secondary">
+                                <a  id="botaofiltrartodos" href="#" class="btn btn-secondary">
                                     Aplique(0)
                                 </a>
                             </div>
