--- a/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/CentralAjuda.cshtml
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.css">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css" />
     <link rel="stylesheet" href="/css/main.css">
-    <link rel="shortcut icon" type="image/png" href="/img/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/img/logo-jenn.png">
 
     <title>Jenn</title>
 </head>
@@ -53,6 +53,7 @@
     </header>
 
     <main class="main">
+
         <section class="central-exames page-interna">
             <div class="row">
                 <div class="col-xl-8">
@@ -143,13 +144,34 @@
                             </div>
                         </div>
                     </div>
-                </div>   
+                </div>
+
                 <div class="col-xl-3 offset-xl-1">
                     <h2>Entre em contato</h2>
+                    @model ui.portal.jenn.ViewModel.ContatoViewModel
+                    <form asp-action="CentralAjuda" asp-controller="Home" method="post" asp-antiforgery="true" class="f-pages">
+                        <div class="form-group">
+                            <label for="InputNome">Nome</label>
+                            <input asp-for="Nome" maxlength="100" type="text" class="form-control" id="InputNome" aria-describedby="emailHelp" placeholder="Digite seu nome" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputEmail">Email</label>
+                            <input asp-for="Email" maxlength="100" type="email" class="form-control" id="InputEmail" aria-describedby="emailHelp" placeholder="Digite seu email" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="InputTelefone">Telefone</label>
+                            <input asp-for="Telefone" type="text" class="form-control" id="InputTelefone" aria-describedby="emailHelp" placeholder="(  )  _ _ _ _ - _ _ _ _ _" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="FormControlTextarea">Mensagem</label>
+                            <textarea asp-for="mensagem_cont" class="form-control" id="FormControlTextarea" rows="3" placeholder="Sua mensagem"></textarea>
+                        </div>
 
-                    @await Component.InvokeAsync("Contato")
+
+                        <button type="submit" class="btn btn-primary">Enviar</button>
+                    </form>
                 </div>
-</section>
+        </section>
     </main>
 
     <footer class="footer">
@@ -171,7 +193,26 @@
 
     <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.maskedinput/1.4.1/jquery.maskedinput.min.js"></script>
 
     <script type="text/javascript" src="/js/script.js"></script>
+
+    <script>
+        (function () {
+            $('#InputTelefone').mask("(999) 99999-9999");
+        })();
+    </script>
+
+    @if (ViewBag.Mensagem != null)
+    {
+        @await Component.InvokeAsync("Popup")
+        <script>
+            (function () {
+                $("#ModalCentralizado").modal();
+            })();
+        </script>
+    }
+
+
 </body>
 </html>
