--- a/src/frontend/ui.portal.jenn/Views/Home/Contato.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/Contato.cshtml
@@ -47,14 +47,16 @@
 
                 </div>
             </div>
-            </div>
-        </header>
+        </div>
+    </header>
     <main class="main">
         <section class="contato page-interna">
             <div class="row">
                 <div class="col-xl-12">
                     <div class="content-page">
-                            @await Component.InvokeAsync("Contato")
+                        @await Component.InvokeAsync("ContatoPrincipal")
+
+
                     </div>
                 </div>
             </div>
@@ -82,5 +84,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script type="text/javascript" src="/js/script.js"></script>
+
+
 </body>
 </html>
