--- a/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
@@ -23,15 +23,13 @@
 </head>
 
 <body>
-
-
     <header class="header">
         <div class="row">
             <div class="col-xl-6 col-lg-4 col-md-5 col-6">
                 <h1>
                     <div class="header__background">
                         <a href="@Url.Action("Inicio", "Home")" title="Jenn">
-                            <img class="header__background--logo" src="img/logo-jenn.png" alt="Logotipo Jenn" />
+                            <img class="header__background--logo" src="/img/logo-jenn.png" alt="Logotipo Jenn" />
                         </a>
                     </div>
                 </h1>
@@ -41,17 +39,6 @@
             </div>
         </div>
     </header>
-    @if (ViewBag.Message != null)
-    {
-        <div class="col-xl-9 col-lg-7 col-md-7 col-6">
-            <div class="row">
-                <label class="form-check-label" for="defaultCheck2">
-                    @ViewBag.Message
-                </label>
-
-            </div>
-        </div>
-    }
 
     <main class="main">
         <section class="home">
@@ -63,14 +50,13 @@
                         </div>
                         <div class="col-xl-5 col-lg-5 col-md-6">
                             <h3>Seja atendido <br /><span>em casa</span> ou <br /> na clínica<br /><span>sem filas.</span> </h3>
-                            <img src="img/selo.png" alt="" class="img-selo" />
+                            <img src="/img/selo.png" alt="" class="img-selo" />
                         </div>
                         <div class="col-xl-12 col-lg-12 col-md-12">
                             <div class="row">
                                 <div class="box-search">
                                     <div class="form">
                                         <form asp-controller="Home" method="post" asp-action="Pesquisa">
-
                                             <div class="form-group">
                                                 <div class="row">
                                                     <div class="col-xl-6 col-lg-6 col-md-5">
@@ -96,8 +82,8 @@
                         </div>
                         <div class="col-xl-12 col-lg-12 col-md-12">
                             <h4>Destaques para você</h4>
-                            @await Component.InvokeAsync("ListaDestaqueTelaInicial" )
-                          
+                            @await Component.InvokeAsync("ListaDestaqueTelaInicial")
+
                         </div>
                     </div>
                 </div>
@@ -117,12 +103,29 @@
         </div>
     </footer>
 
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/3.6.0/js/reveal.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="/js/script.js"></script>
+
+
+
+    @if (ViewBag.Mensagem != null)
+    {
+        @await Component.InvokeAsync("Popup")
+        <script>
+            (function () {
+                $("#ModalCentralizado").modal();
+            })();
+        </script>
+    }
+
+
+
 
 </body>
 </html>
