--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/FooterParte2/Default.cshtml
@@ -16,7 +16,7 @@
         <a href="@Url.Action("TermosCondicoes", "Home")" title="Termos e condições">Termos e condições</a>
     </div>
     <div class="col-xl-3 col-lg-3 col-md-6">
-        <img class="logo-footer" src="img/logo-reduz-jenn.png" alt="" />
+        <img class="logo-footer" src="/img/logo-reduz-jenn.png" alt="" />
         <p>Ghan consultoria e sistemas Ltda. Estrada das Lagrimas, 1877 São Caetano do Sul - SP</p>
         <ul class="social">
             <li><a href="" title=""><img src="/img/social/icone-facebook.png" alt="" /></a></li>
