--- a/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
@@ -19,6 +19,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.js"
             integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE="
             crossorigin="anonymous"></script>
+
     <title>Jenn</title>
 </head> 
 <body class="page page-exame">
@@ -118,19 +119,18 @@
                             </div>
 
                             <div style="padding-top: 50%;" class="action-list">
-                                <a  id="botaofiltrartodos" href="#" class="btn btn-secondary">
+                                <a id="botaofiltrartodos" href="#" class="btn btn-secondary">
                                     Aplique(0)
                                 </a>
                             </div>
 
-                    </div>
+                        </div>
 
 
 
                     </div>
                 </div>
             </div>
-
             <main role="main" class="pb-3">
                 <div class="col-12">
                     <div id="parcialpesquisa" class="row">
@@ -152,16 +152,15 @@
             </div>
         </div>
     </footer>
-
-
-        <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
     <script src="https://unpkg.com/multiple-select@1.5.2/dist/multiple-select.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="~/js/script.js" asp-append-version="true"></script>
+    <script type="text/javascript" src="~/js/produto.js" asp-append-version="true"></script>
     <script type="text/javascript" src="~/js/site.js" asp-append-version="true"></script>
+
 
     @RenderSection("Scripts", required: false)
 </body>
