--- a/src/frontend/ui.portal.jenn/wwwroot/sass/layout/_pages.scss
+++ b/src/frontend/ui.portal.jenn/wwwroot/sass/layout/_pages.scss
@@ -304,7 +304,7 @@
         }
     }
     .footer{
-        margin-top: -40px;
+        margin-top: 30%;
         top: 0;
         @include tablet{
             margin-top: 0;
