--- a/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
@@ -61,6 +61,7 @@
                                                 <div class="row">
                                                     <div class="col-xl-6 col-lg-6 col-md-5">
                                                         <input type="text" class="form-control" id="lista" placeholder="Qual exame ou vacina você procura?" asp-for="Produto" />
+                                                        <input type="hidden" asp-for="IdProcedimento" id="txtIdProcedimento" />
                                                     </div>
                                                     <div class="col-xl-4 col-lg-4 col-md-5">
                                                         <input type="text" class="form-control" id="local" placeholder="Em qual local?" asp-for="Localidade" />
