--- a/src/frontend/ui.portal.jenn/Views/Produtos/Lista.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Produtos/Lista.cshtml
@@ -52,10 +52,12 @@
     pesquisaViewModel.UrlImagem =  item.imgemFrontEmpresa;
     pesquisaViewModel.UrlMaps = item.maps;
     pesquisaViewModel.TipoEmpresa = item.TipoEmpresa;
+    pesquisaViewModel.Produto = ViewBag.Produto;
 
     pesquisaViewModel.Convenios = item.procedimentoEmpresas.SelectMany(p => p.planoProcedimentoEmpresas).Select(c => c.plano.convenio).ToList();
 
     pesquisaViewModel.consultaAgendaViewModels = consultaAgendaViewModels;
+    pesquisaViewModel.IdProcedimento = ViewBag.idProcedimento;
 
     @await Component.InvokeAsync("ProcedimentoLista", pesquisaViewModel)
 }
