--- a/src/frontend/ui.portal.jenn/Views/Shared/Components/Agendamento/Default.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/Components/Agendamento/Default.cshtml
@@ -64,7 +64,7 @@
                                                         botaoHorario = true;
                                                     }
 
-                                                    <a href="/Produtos/Agendamento?id=@Model.EmpresaID"><span style="@visivel" class="active @classvisivel empresa_@Model.EmpresaID">@consultaAgendaViewModels[j].hora.Hour :00 </span></a>
+                                                    <a href="/Produtos/Agendamento?id=@Model.EmpresaID&idProcedimento=@ViewBag.IdProcedimento"><span style="@visivel" class="active @classvisivel empresa_@Model.EmpresaID">@consultaAgendaViewModels[j].hora.Hour :00 </span></a>
                                                 }
                                             }
                                         </div>
